gts28velte: overlay: Update power_profile from T719XXU2BQI1

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -10,7 +10,13 @@
     <item name="wifi.scan">408.9</item>
     <item name="dsp.audio">41.9</item>
     <item name="dsp.video">218</item>
+    <item name="radio.active">178</item>
+    <item name="radio.scanning">140</item>
     <item name="gps.on">55</item>
+    <array name="radio.on">
+        <value>2.06</value>
+        <value>2.06</value>
+    </array>
     <array name="cpu.clusters.cores">
         <value>4</value>
         <value>4</value>
